tests/neg/6570-1.check
-- [E007] Type Mismatch Error: tests/neg/6570-1.scala:23:27 ------------------------------------------------------------
23 |  def thing = new Trait1 {} // error
   |                           ^
   |                           Found:    Object with Trait1 {...}
   |                           Required: N[Box[Int & String]]
   |
   |                           Note: a match type could not be fully reduced:
   |
   |                             trying to reduce  N[Box[Int & String]]
   |                             failed since selector Box[Int & String]
   |                             is uninhabited (there are no values of that type).
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/6570-1.scala:36:54 ------------------------------------------------------------
36 |  def foo[T <: Cov[Box[Int]]](c: Root[T]): Trait2 = c.thing  // error
   |                                                    ^^^^^^^
   |                                                Found:    M[T]
   |                                                Required: Trait2
   |
   |                                                where:    T is a type in method foo with bounds <: Cov[Box[Int]]
   |
   |
   |                                                Note: a match type could not be fully reduced:
   |
   |                                                  trying to reduce  M[T]
   |                                                  failed since selector T
   |                                                  does not uniquely determine parameter x in
   |                                                    case Cov[x] => N[x]
   |                                                  The computed bounds for the parameter are:
   |                                                    x <: Box[Int]
   |
   | longer explanation available when compiling with `-explain`
